--- a/SocialMediaProtection/src/main/java/socialmediaprotection/project/Scanner/email.html
+++ b/SocialMediaProtection/src/main/java/socialmediaprotection/project/Scanner/email.html
@@ -523,7 +523,7 @@
 <!--[if mso]><table width="100%" cellpadding="0" cellspacing="0" border="0"><tr><td style="padding-right: 0px; padding-left: 0px; padding-top: 20px; padding-bottom: 8px; font-family: 'Trebuchet MS', Tahoma, sans-serif"><![endif]-->
 <div style="color:#a8bf6f;font-family:'Montserrat', 'Trebuchet MS', 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', Tahoma, sans-serif;line-height:120%;padding-top:20px;padding-right:0px;padding-bottom:8px;padding-left:0px;">
 <div style="font-size: 12px; line-height: 14px; color: #a8bf6f; font-family: 'Montserrat', 'Trebuchet MS', 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', Tahoma, sans-serif;">
-<p style="font-size: 12px; line-height: 14px; text-align: center; margin: 0;"><span style="color: #ffffff; font-size: 12px; line-height: 14px;"><span style="font-size: 12px; line-height: 14px; color: #a8bf6f;">Email:</span> protect@socidia.com</span></p>
+<p style="font-size: 12px; line-height: 14px; text-align: center; margin: 0;"><span style="color: #ffffff; font-size: 12px; line-height: 14px;"><span style="font-size: 12px; line-height: 14px; color: #ffffff;">Email:</span> protect@socidia.com</span></p>
 </div>
 </div>
 <!--[if mso]></td></tr></table><![endif]-->
